# apps/api/domain/transaction_repository.go
@@ -9,8 +9,8 @@ import (
 
 type TransactionRepository interface {
 	BeginTransaction(ctx context.Context, callback func(ctxWithTx context.Context) *Error) *Error
-	GetTransactionList(ctx context.Context, query string, sortBy SortBy, order Order, skip int, limit int, paymentStatus PaymentStatus, walletId *int) ([]Transaction, *Error)
-	GetTransactionListTotal(ctx context.Context, query string, paymentStatus PaymentStatus, walletId *int) (int64, *Error)
+	GetTransactionList(ctx context.Context, query string, sortBy SortBy, order Order, skip int, limit int, paymentStatus PaymentStatus, walletId *int, source *TransactionSource) ([]Transaction, *Error)
+	GetTransactionListTotal(ctx context.Context, query string, paymentStatus PaymentStatus, walletId *int, source *TransactionSource) (int64, *Error)
 	GetTransactionById(ctx context.Context, id int64) (Transaction, *Error)
 	CreateTransaction(ctx context.Context, transaction Transaction) (Transaction, *Error)
 	UpdateTransactionById(ctx context.Context, transaction Transaction, id int64) (Transaction, *Error)
